src/objects/ddrive__Log__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DateTime__c</fullName>
        <label>DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Error_Text__c</fullName>
        <label>Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddrive__Invalid_Email_Addresses__c</fullName>
        <label>Invalid Email Addresses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ddrive__New_Records_Count__c</fullName>
        <label>New Records Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Succeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeeded</label>
        <type>Checkbox</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>ddrive__Object_Name__c</columns>
        <columns>ddrive__Object_Id__c</columns>
        <columns>NAME</columns>
        <columns>ddrive__Succeeded__c</columns>
        <columns>ddrive__Error_Text__c</columns>
        <columns>ddrive__New_Records_Count__c</columns>
        <columns>ddrive__DateTime__c</columns>
        <columns>ddrive__Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>DD Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>